# garmin-tracker-rs

./: .gitignore  App.tsx  Makefile  README.md  db copy.sqlite  db.sqlite  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.githooks/: commit-msg  pre-commit  pre-merge-commit
.github/workflows/: release.yml
resources/: 99-garmin-tracker-rs.rules  PKGBUILD  garmin-tracker-rs.sh  translations.yaml
resources/ddl/: 001_base_schema.sql  002_user_profile.sql  003_devices.sql  004_training_load.sql  005_additional_subsports.sql
resources/scripts/: commons.py  extract-dependencies.py  extract_dependencies.py  publish.py  release.py  set_version.py  update-dependencies.py
resources/scripts/gen_bridge/: main.py
resources/src/utils/: RustBridge.ts
resources/versions/: current.yaml  previous.yaml
scripts/gen_bridge/: main.py
scripts/gen_bridge/lib/: commons.py  method_definition.py  struct_definition.py
src/: main.tsx
src-tauri/: Cargo.toml  build.rs  db copy.sqlite  db.sqlite  tauri.conf.json
src-tauri-macros/: Cargo.toml
src-tauri-macros/src/: database.rs  lib.rs  traced_command.rs  translate.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: constants.rs  lib.rs  main.rs
src-tauri/src/garmin/: mod.rs
src-tauri/src/garmin/database/: errors.rs  mod.rs
src-tauri/src/garmin/database/dao/: device.rs  errors.rs  exercise.rs  mod.rs  serie.rs  session.rs  user.rs
src-tauri/src/garmin/database/dao/device/: mod.rs
src-tauri/src/garmin/database/dao/exercise/: mod.rs
src-tauri/src/garmin/database/dao/helpers/: mod.rs
src-tauri/src/garmin/database/dao/helpers/querys/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
src-tauri/src/garmin/database/dao/helpers/types/: column_name.rs  mod.rs  order_by.rs  to_sql_str.rs  value.rs  where_clause.rs
src-tauri/src/garmin/database/dao/serie/: mod.rs
src-tauri/src/garmin/database/dao/session/: mod.rs
src-tauri/src/garmin/database/dao/user/: mod.rs
src-tauri/src/garmin/models/: devices.rs  exercise.rs  exercises.rs  mod.rs  serie.rs  session.rs  workouts.rs
src-tauri/src/garmin/mtp/: errors.rs  mod.rs
src-tauri/src/garmin/parser/: errors.rs  mod.rs
src-tauri/src/garmin/ui/: mod.rs
src-tauri/src/models/: exercises.rs  mod.rs  records.rs  workouts.rs
src-tauri/src/ui/: mod.rs  translations.rs
src-tauri/src/ui/app/: mod.rs  models.rs
src-tauri/src/ui/devices/: mod.rs  models.rs
src-tauri/src/ui/exercises/: mod.rs  models.rs
src-tauri/src/ui/notifications/: mod.rs  models.rs
src-tauri/src/ui/sessions/: mod.rs  models.rs
src-tauri/src/ui/translations/: mod.rs
src-tauri/src/ui/user/: mod.rs  models.rs
src-tauri/src/ui/workouts/: mod.rs  models.rs
src/components/Alerts/: Alerts.tsx
src/components/App/: App.tsx
src/components/Exercises/: ExerciseModal.tsx  ExercisesList.tsx
src/components/Loading/: Loading.tsx
src/components/Modals/: ConfirmFinish.tsx  (+2 more)
src/context/: AppContext.ts  AppContext.tsx  AppProvider.tsx
src/models/: RpcModels.ts  alert.ts  exercises.ts  records.ts  tabs.ts  workouts.ts
src/styles/: app.css  main.css  navbar.css
src/utils/: RpcUtils.tsx  RustBridge.ts  translations.ts
(+13 files in other folders)
