[package]
name = "garmin-fit-rs"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "garmin_fit_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = "=0.3.47"
chrono = "0.4.45"
fitparser = "0.11.0"
indexmap = { version = "2.14.0", features = ["serde"] }
rfd = "0.17.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
thiserror = "2.0.18"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tauri-plugin-dialog = "2"
dirs = "6.0.0"
mtp-rs = "0.19.0"


[profile.release]
#lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
opt-level = 3
