[package]
name = "garmin-tracker-rs"
version = "1.4.10"
description = "Sync your devices and track your strength training"
authors = ["Emiliopg91 <ojosdeserbio@gmail.com>"]
edition = "2024"
repository = "https://github.com/Emiliopg91/garmin-tracker-rs"
categories = ["Utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "garmin_tracker_rs_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }
serde_yaml = "^0"
phf_codegen = "^0"
syn = { version = "^2", features = ["visit"] }
swc_ecma_ast = "*"
swc_ecma_parser = "*"
swc_ecma_visit = "*"
swc_common = "*"
walkdir = "*"

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
chrono = "^0"
fitparser = "^0"
indexmap = { version = "^2", features = ["serde"] }
rusqlite = { version = "^0" }
thiserror = "^2"
tokio = { version = "^1", features = ["rt-multi-thread", "macros", "time"] }
dirs = "^6"
mtp-rs = "^0"
tauri-plugin-log = "^2"
tauri-rs-ts-ipc = { version = "^0" }
#tauri-rs-ts-ipc = { path = "../../syn-test" }
serde_yaml = "^0"
semver = "^1"
ureq = { version = "^3", features = ["json"] }
clap = { version = "^4", features = ["derive"] }
rfd = "^0"
phf = { version = "^0", features = ["macros"] }
garmin-tracker-rs-macros = { path = "../src-tauri-macros" }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
